--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "jest-dom": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
