--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-redux-toastr": "^7.6.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux-devtools-extension": "^2.13.9",
